--- a/Examples/Algorithms/Jets/CMakeLists.txt
+++ b/Examples/Algorithms/Jets/CMakeLists.txt
@@ -1,7 +1,9 @@
-add_library(ActsExamplesJets 
-    SHARED 
+add_library(
+    ActsExamplesJets
+    SHARED
     src/TruthJetAlgorithm.cpp
-    src/TrackToTruthJetAlgorithm.cpp)
+    src/TrackToTruthJetAlgorithm.cpp
+)
 target_include_directories(
     ActsExamplesJets
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -13,7 +15,4 @@ target_link_libraries(
 
 acts_compile_headers(ActsExamplesJets GLOB "include/**/*.hpp")
 
-install(
-    TARGETS ActsExamplesJets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
+install(TARGETS ActsExamplesJets LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
