Initialization trials with edm4hep

--- a/Examples/Algorithms/Jets/CMakeLists.txt
+++ b/Examples/Algorithms/Jets/CMakeLists.txt
@@ -9,8 +9,8 @@ target_link_libraries(
         Acts::Fatras
         Acts::PluginFastJet
         Acts::ExamplesFramework
-        Acts::ExamplesIoHepMC3
-        HepMC3::HepMC3
+        Acts::ExamplesIoEDM4hep
+        EDM4HEP::edm4hep
 )
 
 acts_compile_headers(ExamplesJets GLOB "include/**/*.hpp")
